--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/pagination.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/pagination.xhtml
@@ -17,31 +17,37 @@
     xmlns:f="http://xmlns.jcp.org/jsf/core"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
     xmlns:p="http://primefaces.org/ui">
+
+    <ui:param name="readOnly" value="#{SecurityAccessController.hasAuthorityToViewProcesStructureData() and not SecurityAccessController.hasAuthorityToEditProcessStructureData()}"/>
     <p:panel id="paginationWrapperPanel" styleClass="wrapperPanel">
         <ui:fragment id="actionButtons" rendered="#{not MetadataProcessor.showPagination}">
             <p:commandButton id="newButton" title="#{msgs.newElement}"
                              onclick="PF('dialogAddDocStrucType').show();"
-                             styleClass="secondary"
+                             styleClass="secondary #{readOnly ? 'disabled' : ''}"
+                             disabled="#{readOnly}"
                              icon="fa fa-plus fa-sm"
                              iconPos="right">
                 <p:ajax update="dialogAddDocStrucTypeForm"/>
             </p:commandButton>
             <p:commandButton id="linkButton" title="#{msgs.link}"
-                             styleClass="secondary"
+                             styleClass="secondary #{readOnly ? 'disabled' : ''}"
+                             disabled="#{readOnly}"
                              icon="fa fa-link fa-sm"
                              onclick="PF('dialogEditPages').show();"
                              iconPos="right"/>
             <p:commandButton id="deleteButton" title="#{msgs.delete}"
                              action="#{MetadataProcessor.deleteNode}"
                              update="structureTreeForm,structureTreeForm:structureWrapperPanel,structureTreeForm:paginationWrapperPanel,metadataWrapperPanel,commentWrapperPanel,galleryWrapperPanel"
-                             styleClass="secondary"
+                             styleClass="secondary #{readOnly ? 'disabled' : ''}"
+                             disabled="#{readOnly}"
                              icon="fa fa-trash fa-sm"
                              iconPos="right"/>
             <p:commandButton id="pagingButton" value="#{msgs.pagination}"
                              title="#{msgs.pagination}"
                              action="#{MetadataProcessor.setShowPagination(true)}"
                              update="structureTreeForm"
-                             styleClass="secondary"
+                             styleClass="secondary #{readOnly ? 'disabled' : ''}"
+                             disabled="#{readOnly}"
                              icon="fa fa-list-ol fa-sm"
                              iconPos="right"/>
         </ui:fragment>
