Display client for role in user edit page

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/addRolesPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/addRolesPopup.xhtml
@@ -36,6 +36,9 @@
                     <p:column headerText="#{msgs.role}">
                         <h:outputText value="#{item.title}"/>
                     </p:column>
+                    <p:column headerText="#{msgs.client}">
+                        <h:outputText value="#{item.client.name}"/>
+                    </p:column>
                     <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
                         <p:commandLink id="addRole"
                                        action="#{UserForm.addToRole}"
